fix styling for code light/dark mode

--- a/src/assets/components/SortContainer.css
+++ b/src/assets/components/SortContainer.css
@@ -28,7 +28,7 @@
 
 .sort-container-card h4 {
     margin: 0;
-    background-color: #f2f2f2;
+    background-color: #d1d1d1;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     padding: 15px 25px;
